# aoe4-simulation

./: .gitignore  LESSONS.md  README.md  main.py  pyproject.toml
data/: 2026-04-18_AoeIV-Excel-Data-Masterfile.xlsx  2026-04-21_AoeIV-Excel-Data-Masterfile.xlsx  2026-04-24_AoeIV-Excel-Data-Masterfile.xlsx
src/: combat.py  loader.py  unit.py  unit_damage_bonuses.py  unit_types.py
test/: conftest.py  test_combat.py  test_unit.py
