[project]
name = "aoe4-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.mypy]
strict = true
files = ["src"]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "ipdb>=0.13.13",
    "ipython>=9.12.0",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "rich>=15.0.0",
    "ruff>=0.15.11",
]
